fixing view on mobile

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@
     color: #FFA7C3;
 }   
 /*Mobile*/
-@media screen and (min-width:320px){
+@media screen and (min-width:400px){
     @font-face {
         font-family: Plus Jakarta Sans;
         src: url(./PlusJakartaSans-Regular.ttf);
@@ -117,14 +117,18 @@
     }
     .banner-section{
         display: grid;
-        max-width: 100%;
+        max-width: 90%;
         height: 675px;
         grid-auto-rows: auto;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
     }
     .starter-section{
         max-width: 95%;
         margin-top: 5px;
-        
+        margin-left: auto;
+        margin-right: auto;
     }
     .gradient-background{
         max-width: 100%;
@@ -146,7 +150,8 @@
         margin-bottom: 16px;
     }
     .tile{
-        height: 259px;
+        min-height: 259px;
+        max-height: 322px;
         width: 97%;
         border-radius: 10px;
         background-color: #FFFFFF;
@@ -159,6 +164,7 @@
     }
     .image-hero{
         max-width: fit-content;
+        max-height: 500px;
         z-index: -1;
         overflow: hidden;
         object-fit: cover;
@@ -235,6 +241,7 @@
     .image-hero{
         margin-top: -240px;
         z-index: -1;
+        max-height: 750px;
     }
     .tiles-section{
         grid-template-columns: 50% 50%;
@@ -287,7 +294,7 @@
         margin-top: -300px;
         z-index: -1;
         width: 661px;
-        height: 793px;
+        height: 1000px;
     }
     .tiles-section{
         width: 1110px;
